--- a/counsellingApp/templates/app/home.html
+++ b/counsellingApp/templates/app/home.html
@@ -113,8 +113,8 @@
       {% elif object.status == 'ADMIN' %}
       <ul>
         <li>
-          <a href="{% url 'counsellingUrls:superadminPage' pk %}">
-            <span class="icon"
+          <a href="{% url 'counsellingUrls:superadminPage'  pk  'admin'%}">
+            <span class="icon" style = "color:{{admin}}"
               ><ion-icon name="person-outline"></ion-icon
             ></span>
             <span class="title">Admin</span>
@@ -122,8 +122,8 @@
         </li>
 
         <li>
-          <a href="{% url 'counsellingUrls:adminPage' pk %}">
-            <span class="icon"
+          <a href="{% url 'counsellingUrls:adminPage'  pk 'dashboard' %}">
+            <span class="icon"  style = "color:{{dashboard}}"
               ><ion-icon name="people-outline"></ion-icon
             ></span>
             <span class="title">Dashboard</span>
@@ -131,15 +131,16 @@
         </li>
 
         <li>
-          <a href="{% url 'counsellingUrls:indexPage' pk %}">
-            <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
+          <a href="{% url 'counsellingUrls:indexPage'  pk 'home' %}">
+            <span class="icon"  style = "color:{{home}}"
+            ><ion-icon name="home-outline"></ion-icon></span>
             <span class="title">Home</span>
           </a>
         </li>
 
         <li>
-          <a href="{% url 'counsellingUrls:notificationPage' pk %}">
-            <span class="icon"
+          <a href="{% url 'counsellingUrls:notificationPage'  pk 'notify' %}">
+            <span class="icon"  style = "color:{{notify}}"
               ><ion-icon name="chatbubble-ellipses-outline"></ion-icon>
             </span>
             <span class="title">Notifications</span>
@@ -147,8 +148,9 @@
         </li>
 
         <li>
-          <a href="{% url 'counsellingUrls:profilePage' pk %}">
-            <span class="icon"><ion-icon name="cloud-outline"></ion-icon></span>
+          <a href="{% url 'counsellingUrls:profilePage'  pk 'profile' %}">
+            <span class="icon"  style = "color:{{profile}}" 
+            ><ion-icon name="cloud-outline"></ion-icon></span>
             <span class="title">Profile</span>
           </a>
         </li>
