--- a/counsellingApp/templates/app/popup.html
+++ b/counsellingApp/templates/app/popup.html
@@ -110,7 +110,7 @@
               </div>
               <div class="col-sm-2">
                 <a
-                  href="{% url 'counsellingUrls:indexPage' pk %}"
+                  href="{% url 'counsellingUrls:indexPage' pk 'home'%}"
                   id="minelinks"
                 >
                   <i
