--- a/counsellingApp/templates/app/result.html
+++ b/counsellingApp/templates/app/result.html
@@ -27,7 +27,7 @@
       </form>
     </center>
     <div class="col-sm-2" id="minesearch">
-      <a href="{% url 'counsellingUrls:profilePage' pk %}" id="mysearched">
+      <a href="{% url 'counsellingUrls:profilePage' pk 'profile'%}" id="mysearched">
         Back</a
       >
     </div>
