--- a/counsellingApp/templates/app/settings.html
+++ b/counsellingApp/templates/app/settings.html
@@ -119,7 +119,7 @@
       </div>
 
       <div id="footer6">
-        <a href="{% url 'counsellingUrls:adminPage' pk %}" id="adminPage">
+        <a href="{% url 'counsellingUrls:adminPage' pk 'dashboard'%}" id="adminPage">
           <i
             class="fas fa-circle"
             aria-hidden="true"
