--- a/counsellingApp/templates/app/admin.html
+++ b/counsellingApp/templates/app/admin.html
@@ -4,13 +4,13 @@
 
 <section id="section6container1" class="col-sm-10">
   <div>
-    <div>
+    <div> {% for object in objects%}<!---->
+        {% if object.user_id == pk|add:0 %}
       <div id="toprightcontent6">
-        <p id="panel">ADMIN PANEL</p>
+        <p id="panel">{{object.firstName}} DASHBOARD</p>
       </div>
       <div id="topleftcontent6">
-        {% for object in objects%}<!---->
-        {% if object.user_id == pk|add:0 %}
+       
         <!---->
         {% if object.profile %}
         <img
@@ -365,7 +365,7 @@
     </div>
   </div>
   <div id="footer6">
-    <a href="{% url 'counsellingUrls:adminPage' pk %}" id="adminPage">
+    <a href="{% url 'counsellingUrls:adminPage' pk 'dashboard'%}" id="adminPage">
       <i
         class="fas fa-circle"
         aria-hidden="true"
