--- a/counsellingApp/templates/app/admin.html
+++ b/counsellingApp/templates/app/admin.html
@@ -106,7 +106,7 @@
               <div class="icon">
                 <i class="fa fa-users"></i>
               </div>
-              <a href="#" class="card-box-footer"
+              <a href="{% url 'counsellingUrls:all_counsellors' pk %}" class="card-box-footer"
                 >View More <i class="fa fa-arrow-circle-right"></i
               ></a>
             </div>
