--- a/counsellingApp/templates/app/super.html
+++ b/counsellingApp/templates/app/super.html
@@ -93,7 +93,7 @@
               <div class="icon">
                 <i class="fa fa-handshake" aria-hidden="true"></i>
               </div>
-              <a href="#" class="card-box-footer"
+              <a href="{% url 'counsellingUrls:list' pk %}" class="card-box-footer"
                 >View More <i class="fa fa-arrow-circle-right"></i
               ></a>
             </div>
