--- a/counsellingApp/templates/app/add.html
+++ b/counsellingApp/templates/app/add.html
@@ -25,7 +25,7 @@
           
         </div>
       </div>
-   
+   <br>
      <form method="POST" action="" enctype="multipart/form-data">
         {% csrf_token %}
      <div class="col-sm-3">
@@ -113,7 +113,7 @@
               </div>
             </div>
 
-            <div class="col-sm-3">
+            <div class="col-sm-4">
               <div class="form-group">
                 {% comment %}
                 <input type="text" class="form-control" required />
@@ -194,8 +194,10 @@
             </div>
           </div>
         </div>
-        <a href = "{% url 'counsellingUrls:superadminPage' pk 'admin'%}">Back</a>
-     <button type="submit" class="btn btn-primary">Submit</button>
+        <label class="btn btn-danger" >
+        <a href = "{% url 'counsellingUrls:superadminPage' pk 'admin'%}" style = "color:white;text-decoration: none;">Back</a>
+        </label >
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 {% else%}
 {% endif %}
