--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -25,7 +25,7 @@
     height: 100%;
     width: 83.3%;
     float: right;
-    overflow: scroll;
+    overflow-x: hidden;
 
     display: block;
     animation-name: example;
