--- a/counsellingApp/templates/app/header.html
+++ b/counsellingApp/templates/app/header.html
@@ -1,4 +1,5 @@
-{% load static %}
+{% load static %}  
+
 <head>
   <title>UG COUNSELLING</title>
   <meta charset="utf-8" />
@@ -9,6 +10,7 @@
   <style>
     {% include 'app/assets/main.css'%}
   </style>
+<script>{% include 'app/assets/js/index.js'%}</script>
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="icon" href="{% static "media/University.png" %}">
 
@@ -76,4 +78,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
   />
+
+  <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
+
 </head>
