--- a/counsellingApp/templates/app/super.html
+++ b/counsellingApp/templates/app/super.html
@@ -120,7 +120,13 @@
          <p id="inputdate" />
           <br />
           <hr />
+              
           
+          <div id="chartDiv" style="width:50%; height:300px; margin:0 auto;">
+
+            
+          </div>
+
         </div>
       </div>
     </div>
