--- a/counsellingApp/templates/app/header.html
+++ b/counsellingApp/templates/app/header.html
@@ -10,7 +10,7 @@
   <style>
     {% include 'app/assets/main.css'%}
   </style>
-<script>{% include 'app/assets/js/index.js'%}</script>
+<script>{% include 'app/assets/js/super.js'%}</script>
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="icon" href="{% static "media/University.png" %}">
 
