--- a/counsellingApp/templates/app/home.html
+++ b/counsellingApp/templates/app/home.html
@@ -2,7 +2,9 @@
 <!---->{% load static %} {% block body %}
 
 <body ng-app="counsellingApp">
-  <section id="section1" class="col-sm-2">
+  <section id="section1" class="col-sm-2"
+  style = 
+  >
     <ul class="bubble-boxes">
       <li></li>
       <li></li>
