--- a/counsellingApp/templates/app/notification.html
+++ b/counsellingApp/templates/app/notification.html
@@ -11,8 +11,8 @@
     <center><hr id="hrsect4" /></center>
 
     <div
-      style="overflow-y: scroll; overflow-x: hidden; height: 100%"
-      class="bg-white"
+      style="overflow-y: scroll; overflow-x: hidden; height: 100%;;"
+      
     >
       {% for notificate in notification %}<!---->
       {% if notificate.student_id == pk%}
